Update code_analysis.md